# mpmri-viewer

./: README.md  app.py  pyproject.toml  requirements.txt
src/: app_lib.py  lib.py
