[project]
name = "mpmri-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.23.5",
    "opencv-python==4.8.1.78",
    "panel==1.2.3",
    "pillow==10.1.0",
    "scikit-image==0.19.2",
    "simpleitk==2.3.0",
]
